[gd_scene load_steps=3 format=3 uid="uid://8wrsrwhieekf"]

[ext_resource type="Script" path="res://Scenes/CommandLine/Command_Line.gd" id="1_07fdu"]
[ext_resource type="Texture2D" uid="uid://dq4w5vi3um5u2" path="res://UI/Trash.png" id="2_ga3wp"]

[node name="Command_Line" type="Panel"]
custom_minimum_size = Vector2(0, 60)
size_flags_horizontal = 3
script = ExtResource("1_07fdu")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_right = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="SC_Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Slack Command:"

[node name="SC_LineEdit" type="LineEdit" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Spacer" type="Control" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.13

[node name="CC_Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Companion API Call"

[node name="CC_LineEdit" type="LineEdit" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Spacer2" type="Control" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.25

[node name="DeleteButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
icon = ExtResource("2_ga3wp")
icon_alignment = 1
expand_icon = true

[node name="LastFired" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 0.513726)
theme_override_font_sizes/font_size = 14
text = "Never fired"

[connection signal="text_changed" from="MarginContainer/VBoxContainer/HBoxContainer/SC_LineEdit" to="." method="_on_sc_line_edit_text_changed"]
[connection signal="text_changed" from="MarginContainer/VBoxContainer/HBoxContainer/CC_LineEdit" to="." method="_on_cc_line_edit_text_changed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/DeleteButton" to="." method="_on_delete_button_pressed"]
